--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -76,7 +76,8 @@
                     var errorCode = error.code;
                     var errorMessage = error.message;
                     // ..
-                    $("#err").show();
+                    $("#err").removeClass("hidden");
+                    $("#err").addClass("show");
                   });
 
       });
