--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -67,9 +67,6 @@
                 var password = $("#password").val();
                 firebase.auth().signInWithEmailAndPassword(email, password)
                   .then((user) => {
-                    // Signed in
-                    // ...
-                    console.log(666);
                     window.location.href="/index.html";
                   })
                   .catch((error) => {
@@ -78,6 +75,11 @@
                     // ..
                     $("#err").removeClass("hidden");
                     $("#err").addClass("show");
+                    $("#password").val("");
+                    setTimeout(function(){
+                        $("#err").removeClass("show");
+                        $("#err").addClass("hidden");
+                     }, 2000);
                   });
 
       });
