--- a/templates/base.html
+++ b/templates/base.html
@@ -80,21 +80,24 @@
 
     <!-- firebase.js Auth -->
       <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
+     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase.js"></script>
 
-          <script type="text/javascript">
-          // Your web app's Firebase configuration
-          var firebaseConfig = {
-            apiKey: "AIzaSyCwK3667exMhj25F2qLdoroTfAsZupBLek",
-            authDomain: "aaai2021.firebaseapp.com",
-            projectId: "aaai2021",
-            storageBucket: "aaai2021.appspot.com",
-            messagingSenderId: "919023164606",
-            appId: "1:919023164606:web:e59d42ed5d45626a7fd2ef"
-          };
-          // Initialize Firebase
-          firebase.initializeApp(firebaseConfig);
+      <script type="text/javascript">
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCwK3667exMhj25F2qLdoroTfAsZupBLek",
+        authDomain: "aaai2021.firebaseapp.com",
+        projectId: "aaai2021",
+        storageBucket: "aaai2021.appspot.com",
+        messagingSenderId: "919023164606",
+        appId: "1:919023164606:web:e59d42ed5d45626a7fd2ef"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      </script>
+      {% block firebase_initApp %}
+      <script type="text/javascript">
       initApp = function() {
         firebase.auth().onAuthStateChanged(function(user) {
           if (user) {
@@ -112,6 +115,7 @@
         initApp()
       });
     </script>
+      {% endblock %}
 
   </head>
 
