--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -82,7 +82,7 @@
                 var password = $("#password").val();
                 firebase.auth().signInWithEmailAndPassword(email, password)
                   .then((user) => {
-                        $.post("set_user",{user:user},function(result){
+                        $.post("set_user",{user:email},function(result){
                             if(result==200){
                                 window.location.href="/index.html";
                             }else{
