--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -83,7 +83,7 @@
                 firebase.auth().signInWithEmailAndPassword(email, password)
                   .then((user) => {
                         $.post("set_user",{user:email},function(result){
-                            if(result==200){
+                            if(result['code']==200){
                                 window.location.href="/index.html";
                             }else{
                                 //
