--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -24,6 +24,24 @@
     <link href="favicon.ico" rel="shortcut icon" />
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- firebase.js Auth -->
+      <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
+     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase.js"></script>
+
+    <script type="text/javascript">
+          // Your web app's Firebase configuration
+          var firebaseConfig = {
+            apiKey: "AIzaSyCwK3667exMhj25F2qLdoroTfAsZupBLek",
+            authDomain: "aaai2021.firebaseapp.com",
+            projectId: "aaai2021",
+            storageBucket: "aaai2021.appspot.com",
+            messagingSenderId: "919023164606",
+            appId: "1:919023164606:web:e59d42ed5d45626a7fd2ef"
+          };
+          // Initialize Firebase
+          firebase.initializeApp(firebaseConfig);
+      </script>
 
 </head>
 <body style=" background: url({{config.background_image}}) no-repeat center center fixed; background-size: 100% 100%;">
