--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
       <div class="col-md-12 col-xs-12">
         <div id="gitter" class="slp">
           <center>
-            <iframe frameborder="0" src="https://{{config.chat_server}}/channel/announcements?layout=embedded" height="500px" width="100%" ></iframe>
+            <iframe frameborder="0" src="http://{{config.chat_server}}/channel/general?layout=embedded" height="500px" width="100%" ></iframe>
           </center>
         </div>
       </div>
