--- a/templates/papers.html
+++ b/templates/papers.html
@@ -244,15 +244,15 @@
               />
               compact
             </label>
-            <label class="btn btn-sm btn-outline-secondary">
-              <input
-                type="radio"
-                name="options"
-                value="compact"
-                autocomplete="off"
-              />
-              medium
-            </label>
+{#            <label class="btn btn-sm btn-outline-secondary">#}
+{#              <input#}
+{#                type="radio"#}
+{#                name="options"#}
+{#                value="compact"#}
+{#                autocomplete="off"#}
+{#              />#}
+{#              medium#}
+{#            </label>#}
             <label class="btn btn-sm btn-outline-secondary">
               <input
                 type="radio"
@@ -407,8 +407,8 @@
         <h6 id="modalAbstractHeader" class="text-muted">Abstract</h6>
         <p id="modalAbstract"></p>
 
-        <h6 id="modalKeywordsHeader" class="text-muted">Keywords</h6>
-        <p style="font-size: 1.3em; font-family: monospace;" id="modalKeywords"></p>
+{#        <h6 id="modalKeywordsHeader" class="text-muted">Keywords</h6>#}
+{#        <p style="font-size: 1.3em; font-family: monospace;" id="modalKeywords"></p>#}
 
         <h6 id="modalSessionsHeader" class="text-muted">Sessions</h6>
         <div style="display: flex;" id="modalSessions"></div>
