--- a/templates/papers_vis.html
+++ b/templates/papers_vis.html
@@ -83,10 +83,10 @@
               </label>
     
 
-              <label class="btn btn-outline-secondary" data-tippy-content="Search for papers from specific keywords">
-                <input type="radio" name="options" value="keywords" autocomplete="off" />
-                by keywords
-              </label>
+{#              <label class="btn btn-outline-secondary" data-tippy-content="Search for papers from specific keywords">#}
+{#                <input type="radio" name="options" value="keywords" autocomplete="off" />#}
+{#                by keywords#}
+{#              </label>#}
               <button class="btn btn btn-outline-secondary typeahead_all_clear" type="button">
                 &times;
               </button>
@@ -94,16 +94,16 @@
           </div>
         </div>
 
-        <div class="col-lg-5">
-          <div class="form-group">
-            <select id="track_selector" class="selectpicker form-control" data-live-search="true" data-style="btn-light">
-              <option>All tracks</option>
-            {% for track in tracks %}
-              <option>{{ track }}</option>
-            {% endfor %}
-            </select>
-          </div>
-        </div>
+{#        <div class="col-lg-5">#}
+{#          <div class="form-group">#}
+{#            <select id="track_selector" class="selectpicker form-control" data-live-search="true" data-style="btn-light">#}
+{#              <option>All tracks</option>#}
+{#            {% for track in tracks %}#}
+{#              <option>{{ track }}</option>#}
+{#            {% endfor %}#}
+{#            </select>#}
+{#          </div>#}
+{#        </div>#}
 
     </div>
 
