fix track route bug

--- a/templates/papers.html
+++ b/templates/papers.html
@@ -36,7 +36,7 @@
   </a> .</strong>
     <br>
 
-    You can download a list of your favorite papers <a id="myLink" href="#" onclick="saveFavorites();">here</a>.
+{#    You can download a list of your favorite papers <a id="myLink" href="#" onclick="saveFavorites();">here</a>.#}
 
   </div>
 {% endblock %}
