--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -69,7 +69,7 @@
 
 
 <!-- Author -->
-{% if tutorial.sessions %}
+{% if tutorial.authors %}
 <div id="author" class="pp-card m-3 collapse hide">
   <div class="card-body">
     <div class="card-text">
