--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,4 +1,4 @@
-{% set active_page = "Help Desk" %}
+{% set active_page = "FAQ" %}
 {% extends "base.html" %}
 
 {% block top %}
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="col-md-7 col-sm-12 pr-5 lead">
-    <p>Welcome to Help Desk!<br><br>
+    <p>Welcome to FAQ!<br><br>
       Here is nothing left.
     </p>
   </div>
