check and update papers information and modified UI

--- a/templates/papers.html
+++ b/templates/papers.html
@@ -448,7 +448,7 @@
 
   $(document).ready(function () {
     tippy("[data-tippy-content]", { trigger: "mouseenter focus" });
-    const program = getUrlParameter("program") || 'AISI'
+    const program = getUrlParameter("program") || 'Main'
     let track = ""
     if (program !== "workshop") {
         track = getUrlParameter("track") || 'All tracks'
