--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -69,7 +69,7 @@
   </div>
 
   <div class='public-chat-title-box'>
-    <!--<span class="float-left"><a class="text-warning text-sm" href="/rocketchat/concerns"  target="_blank">Concerns</a></span>-->
+    <span class="float-left"><a class="text-warning text-sm" href="/rocketchat/concerns"  target="_blank">Concerns</a></span>
     <a style="float:right;" class='rocketchat-full-button' href="https://localhost:3000/" target="_blank" title="Full Size">
       Full Screen
     </a>
