Revert "Merge branch 'develop' into help"
This reverts commit 54c1576c381a5295b0b87bb4d02754e245af01e1, reversing
changes made to eaa7f6f35cba66b6a267fa1044364bf247995461.

--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -1,4 +1,4 @@
-{% set active_page = "IAAI" %}
+{% set active_page = "EAAI" %}
 {% extends "base.html" %}
 
 {% block top %}
@@ -6,47 +6,11 @@
 {% endblock %}
 
 {% block content %}
-{% endblock %}
-
-
-{% set page_title = "IAAI" %}
-{% block head %}
-{{ super() }}
-{% endblock %}
-
-{% block heading %}
-{{ components.section("Eleventh Symposium on Educational Advances in Artificial Intelligence (EAAI)") }}
 
 <div class="row">
-  <div class="col-12 pb-4">
-    <p class="lead">
-        Welcome to EAAI-21!
-<br><br>
-        Eleventh Symposium on Educational Advances in Artificial Intelligence
-February 6-7, 2021
-<br><br>
-        EAAI-21 (http://eaai.cs.mtu.edu) provides a venue for researchers and educators to discuss issues and share resources
-        related to teaching AI and using AI in education. Most contributions address undergraduate and graduate education,
-        but some extend to the K-12 and postgraduate levels. The conference will include the following tracks:
-        <br><br>
-* EAAI Main Track<br>
-* Special Paper Track: Demos, Software Tools, and Activities for Teaching AI in K-12<br>
-* Special Paper Track: Gin Rummy Undergraduate Research Challenge<br>
-* Special Track: Model AI Assignments<br>
-<br><br>
-In addition, EAAI will feature the following invited talks:
-<br><br>
-* 2021 AAAI/EAAI-21 Outstanding Educator Award Lecture<br>
-Michael Wooldridge: Talking to the Public about AI<br>
-<br><br>
-* EAAI-21 Panel on Teaching Online<br>
-  Panelists: Ashok Goel, Ansaf Salleb-Aouissi, and Mehran Sehami<br>
-<br><br>
-* EAAI-21 Panel on Evauation of AI Education Outcomes<br>
-  Panelists: TBD<br>
-<br>
-
-EAAI-21 Full Schedule (TBD)
+  <div class="col-md-7 col-sm-12 pr-5 lead">
+    <p>Welcome to EAAI!<br><br>
+      Here is nothing left.
     </p>
   </div>
 </div>
