--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -2,16 +2,61 @@
 {% extends "base.html" %}
 
 {% block top %}
+<style>
+  div.top-info {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 400;
+  }
+
+  div.container {
+    width: 100%;
+    margin: 1rem auto;
+  }
+
+  div.public-chat-title-box {
+    background-color: rgba(0, 114, 188, 1);
+    display: block;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 10px;
+  }
+
+  span.float-left {
+    float: left;
+  }
+
+  a.rocketchat-full-button {
+    float: right;
+  }
+
+  div.rocketchat-safety-valve {
+    line-height: 1.5;
+    font-size: 1rem;
+  }
+
+  div.rocketchat-frame {
+    width: 100%;
+    text-align:center;
+  }
+
+  iframe {
+    width: 100%;
+    height: 30rem;
+  }
+</style>
 
 {% endblock %}
 
 {% block content %}
 
 <div class="row">
-  <div class="col-md-7 col-sm-12 pr-5 lead">
-    <p>Welcome to Help Desk!<br><br>
-      Here is nothing left.
-    </p>
+  <div class="top-info">
+    <p>To access rocketchat in a extra window, please click on "full screen".</p>
+    <a class="btn btn-outline-secondary btn" href="https://neurips2020.rocket.chat/channel/townhall?resumeToken=vJ8P5O0yQ3rcNyKrBrz8qUAubj-9cAj8zEayZS2hlcM">Launch Rocket.Chat full screen</a> 
   </div>
 </div>
 
@@ -36,5 +81,3 @@
 </div>
 {% endblock %}
 
-{% block footer %}
-{% endblock %}
