--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -11,9 +11,9 @@
 <div class="row">
   <div class="col-12 pb-4">
     <p class="lead">
-      AAAI 2021 is grateful to all its sponsors, who are listed below. We simply
+      EMNLP 2020 is grateful to all its sponsors, who are listed below. We simply
       couldn't run the conference without the help of these generous companies. We
-      thank them sincerely for their ongoing support of the AI community.
+      thank them sincerely for their ongoing support of the NLP/CL community.
       <br >
       <span class="font-weight-bold">Click on sponsor logos to visit their Virtual Exhibit Spaces!</span>
     </p>
