--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -69,7 +69,7 @@
 
 
 <!-- Author -->
-{% if tutorial.authors %}
+{% if tutorial.sessions %}
 <div id="author" class="pp-card m-3 collapse hide">
   <div class="card-body">
     <div class="card-text">
@@ -132,7 +132,7 @@
     {% endif %}
 
     <a class="btn btn-outline-danger"
-       href="https://aaai-21.rocket.chat/channel/{{tutorial.rocketchat_channel}}"
+       href="https://{{config.chat_server}}/channel/{{tutorial.rocketchat_channel}}"
        target="_blank"
        style="margin-left: 5px; margin-right: 5px">
       Chat
@@ -168,7 +168,7 @@
     <!-- RocketChat Channel -->
     <div class="col-md-{{ rocketchat_width }} col-xs-12 p-2">
       <div id="gitter" class="slp">
-        <iframe frameborder="0" src="https://aaai-21.rocket.chat/channel/{{tutorial.rocketchat_channel}}?layout=embedded" height="700px" width="100%" ></iframe>
+        <iframe frameborder="0" src="https://{{config.chat_server}}/channel/{{tutorial.rocketchat_channel}}?layout=embedded" height="700px" width="100%" ></iframe>
       </div>
     </div>
   </div>
