--- a/templates/livestream.html
+++ b/templates/livestream.html
@@ -17,7 +17,7 @@
 {% block content %}
 
 {% set livestream_id = '38942830' %}
-{% set cart_url = "https://www.streamtext.net/player?event=UofEdin" %}
+<!--{% set cart_url = "https://www.streamtext.net/player?event=UofEdin" %}-->
 
 <div id="live container">
     <div class="text-muted text-center">
@@ -25,10 +25,10 @@
       <a href="https://slideslive.com/{{ livestream_id }}" target="_blank">
         livestream
       </a>
-      and
-      <a href="{{ cart_url }}" target="_blank">
-        captions (for panels only)
-      </a>
+<!--      and-->
+<!--      <a href="{{ cart_url }}" target="_blank">-->
+<!--        captions (for panels only)-->
+<!--      </a>-->
       below
       in separate windows.
     </div>
@@ -51,50 +51,50 @@
       </div>
     </div>
 
-    <div class="row"
-         style="padding: 0; margin-left: 0; margin-right: 0; margin-top: -35px;">
-      <div class="col-md-12 col-xs-12 p-2">
-        <div class="collapse" id="liveCaptioning">
-          <div class="card card-body">
-            <iframe
-                src="{{ cart_url }}&chat=false&controls=false&header=false&footer=false&ff=arial&fs=24"
-                marginwidth="0px"
-                marginheight="0px"
-                scrolling="no"
-                frameborder="0"
-                class="style7"
-                id="stFrame"
-                style="width:100%;height:200px"
-            >
-            </iframe>
-          </div>
-        </div>
-    </div>
-    </div>
+<!--    <div class="row"-->
+<!--         style="padding: 0; margin-left: 0; margin-right: 0; margin-top: -35px;">-->
+<!--      <div class="col-md-12 col-xs-12 p-2">-->
+<!--        <div class="collapse" id="liveCaptioning">-->
+<!--          <div class="card card-body">-->
+<!--            <iframe-->
+<!--                src="{{ cart_url }}&chat=false&controls=false&header=false&footer=false&ff=arial&fs=24"-->
+<!--                marginwidth="0px"-->
+<!--                marginheight="0px"-->
+<!--                scrolling="no"-->
+<!--                frameborder="0"-->
+<!--                class="style7"-->
+<!--                id="stFrame"-->
+<!--                style="width:100%;height:200px"-->
+<!--            >-->
+<!--            </iframe>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    </div>-->
 
-    {% set text_show = "Show Live Captioning (Only available for panel discussions)" %}
-    {% set text_hide = "Hide Live Captioning (Only available for panel discussions)" %}
-    <p class="text-center">
-      <a id="toggleCaption"
-         class="btn btn-danger"
-         data-toggle="collapse"
-         href="#liveCaptioning"
-         role="button"
-         aria-expanded="false"
-         aria-controls="liveCaptioning"
-         onclick="toggleCaptions()"
-      >{{ text_show }}</a>
-    </p>
-    <script>
-      function toggleCaptions() {
-        const x = document.getElementById("toggleCaption");
-        if (x.innerHTML === "{{ text_show }}") {
-          x.innerHTML = "{{ text_hide }}";
-        } else {
-          x.innerHTML = "{{ text_show }}";
-        }
-      }
-    </script>
+<!--    {% set text_show = "Show Live Captioning (Only available for panel discussions)" %}-->
+<!--    {% set text_hide = "Hide Live Captioning (Only available for panel discussions)" %}-->
+<!--    <p class="text-center">-->
+<!--      <a id="toggleCaption"-->
+<!--         class="btn btn-danger"-->
+<!--         data-toggle="collapse"-->
+<!--         href="#liveCaptioning"-->
+<!--         role="button"-->
+<!--         aria-expanded="false"-->
+<!--         aria-controls="liveCaptioning"-->
+<!--         onclick="toggleCaptions()"-->
+<!--      >{{ text_show }}</a>-->
+<!--    </p>-->
+<!--    <script>-->
+<!--      function toggleCaptions() {-->
+<!--        const x = document.getElementById("toggleCaption");-->
+<!--        if (x.innerHTML === "{{ text_show }}") {-->
+<!--          x.innerHTML = "{{ text_hide }}";-->
+<!--        } else {-->
+<!--          x.innerHTML = "{{ text_show }}";-->
+<!--        }-->
+<!--      }-->
+<!--    </script>-->
 
     <!-- Chat -->
     {{ components.section("Live Chat") }}
